cluster/media/nzbhydra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra
  namespace: media
  labels:
    app: nzbhydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra
  template:
    metadata:
      labels:
        app: nzbhydra
    spec:
      nodeName: luma
      containers:
        - name: nzbhydra
          image: ghcr.io/hotio/nzbhydra2@sha256:7279e8161855fe89aad4fc93932525b938085e43e077698d244b4625678f8a9a
          ports:
            - containerPort: 5076
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: 5076
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbhydra-config
---
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
  namespace: media
spec:
  selector:
    app: nzbhydra
  ports:
    - protocol: TCP
      port: 5076
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzb
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-authentik-embedded-outpost.id.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://id.luma.chrismiller.xyz/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  tls:
    - hosts:
        - nzb.luma.chrismiller.xyz
      secretName: nzb-luma-tls
  rules:
    - host: nzb.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbhydra
                port:
                  number: 5076
